Fixed bug that prevented hero-bar to be behind navbar menu.

--- a/root/scss/main.scss
+++ b/root/scss/main.scss
@@ -61,8 +61,7 @@ body::-webkit-scrollbar-thumb {
 .hero-bar {
   width: 100%;
   height: 14px;
-  background-color: $light-blue;
-  opacity: 40%;
+  background-color: $light-blue-40;
   border-radius: 10rem;
 }
 
